# angel-shreiner-interactive-computer-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.h
02/: example1.cpp  fshader21.glsl  fshader23.glsl  gasket1.cpp  gasket1.vert  gasket2.cpp  gasket2.vert  gasket3.cpp  gasket3.vert  gasket3v2.cpp  gasket3v2.vert  gasket4.cpp  gasket4.frag  gasket4.vert  vshader21.glsl  vshader23.glsl  vshader23v2.glsl  vshader24.glsl
03/: cad.vert  cad1.cpp  cad2.cpp  rotatingSquare1.cpp  rotatingSquare1.vert  rotatingSquare2.cpp  square.cpp  square.vert
04/: cube.cpp  cube.vert  cubev.cpp
